--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "node build.mjs || exit 0",
-    "lint": "eslint . --config eslint.config.js",
-    "lint:fix": "eslint . --config eslint.config.js --fix"
+    "lint": "eslint . --config eslint.config.mjs",
+    "lint:fix": "eslint . --config eslint.config.mjs --fix"
   },
   "keywords": [],
   "author": "",
